2016-02-26  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-450

	* src/continua.cc:

	Slightly lower upper boundary N2N2_N2F_ckd_mt_250_v2 from 2710.466309
	to 2710.45 for CKD_mt_250_CIAfun_n2 continuum to avoid possible
	out-of-bounds array access in XINT_FUN. Bug reported by Mareike Burba.

2016-02-24  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-449

	* src/m_tmatrix.cc (scat_data_singleTmatrix):

	Add check for horizontally-aligned particles that the azimuth grid
	starts at 0 and ends at 180.

	* controlfiles/artscomponents/tmatrix/TestTMatrix.arts:

	Change azimuth grid from 0-360 to 0-180 for aligned particles.

	* controlfiles/artscomponents/tmatrix/TestTMatrix.aligned.ssdREFERENCE.xml:

	Updated.

2016-02-23  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-448

	* Known issue: TestTMatrix.arts currently fails due to new check in
	reading routine of SingleScatteringData. aa grid must end at 180 for
	horizontally aligned particles, but currently goes up to 360.
	Solution to be discussed.

	* src/cloudbox.{cc,h} (chk_scat_data):

	Split into two functions (c_s_d and chk_scat_data_fgrid).

	* src/m_cloudbox.cc (ScatElementsPndAndScatAdd,
	ScatSpeciesPndAndScatAdd, ScatElementsToabs_speciesAdd,
	ScatSpeciesScatAndMetaRead):

	Call c_s_d_fgrid instead of c_s_d.

	* src/xml_io_compound_types.cc:

	Call check_scat_data in reading routine for SingleScatteringData.

2016-02-22  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-447

	* 3rdparty/tmatrix/amplq.arts.f, 3rdparty/tmatrix/tmq.arts.f:

	Modified T-matrix version that makes the quad-precision callable as a
	subroutine.

	* 3rdparty/tmatrix/CMakeLists.txt, CMakeLists.txt, config.h.cmake:

	Add ENABLE_TMATRIX_QUAD option.

	* README: Add doc for T-matrix quad-precision.

	* src/main.cc: Display T-matrix precision with -v option.

2016-02-22 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-446
	
	* src/m_optproperties.cc (ScatSpeciesMerge):