@@ -400,31 +400,34 @@ void DisortCalc(Workspace& ws,
       //DEBUG_VAR(dtauc)
       
       // Call disort
-      disort_(&nlyr, dtauc.get_c_array(),
-              ssalb.get_c_array(), pmom.get_c_array(), 
-              t.get_c_array(), &wvnmlo, &wvnmhi,
-              &usrtau, &ntau, utau.get_c_array(), 
-              &nstr, &usrang, &numu, 
-              umu.get_c_array(), &nphi,
-              phi.get_c_array(), 
-              &ibcnd, &fbeam,
-              &umu0, &phi0, &fisot,
-              intang.get_c_array(),
-              &lamber, 
-              &albedo, hl.get_c_array(),
-              &btemp, &ttemp, &temis, 
-              &deltam, 
-              &plank, &onlyfl, &accur,
-              prnt, header, 
-              &maxcly, &maxulv,
-              &maxumu, &maxcmu, 
-              &maxphi, rfldir.get_c_array(), 
-              rfldn.get_c_array(),
-              flup.get_c_array(), dfdt.get_c_array(), 
-              uavg.get_c_array(),
-              uu.get_c_array(), u0u.get_c_array(), 
-              albmed.get_c_array(),
-              trnmed.get_c_array());
+#pragma omp critical(fortran_disort)
+      {
+          disort_(&nlyr, dtauc.get_c_array(),
+                  ssalb.get_c_array(), pmom.get_c_array(),
+                  t.get_c_array(), &wvnmlo, &wvnmhi,
+                  &usrtau, &ntau, utau.get_c_array(),
+                  &nstr, &usrang, &numu,
+                  umu.get_c_array(), &nphi,
+                  phi.get_c_array(),
+                  &ibcnd, &fbeam,
+                  &umu0, &phi0, &fisot,
+                  intang.get_c_array(),
+                  &lamber,
+                  &albedo, hl.get_c_array(),
+                  &btemp, &ttemp, &temis,
+                  &deltam,
+                  &plank, &onlyfl, &accur,
+                  prnt, header,
+                  &maxcly, &maxulv,
+                  &maxumu, &maxcmu,
+                  &maxphi, rfldir.get_c_array(),
+                  rfldn.get_c_array(),
+                  flup.get_c_array(), dfdt.get_c_array(),
+                  uavg.get_c_array(),
+                  uu.get_c_array(), u0u.get_c_array(),
+                  albmed.get_c_array(),
+                  trnmed.get_c_array());
+      }
 
       for(Index j = 0; j<numu; j++)
           for(Index k = 0; k<(cloudbox_limits[1]-cloudbox_limits[0]+1); k++)
