@@ -1,3 +1,12 @@
+2016-03-03  Oliver Lemke  <olemke@core-dump.info>
+
+	* arts-2-3-451
+
+	* src/disort.cc, src/m_disort.cc:
+
+	Put disort fortran calls inside critical regions. Fortran code is in
+	its current state not thread-safe.
+
 2016-02-26  Oliver Lemke  <olemke@core-dump.info>
 
 	* arts-2-3-450
